# CMEngine

./: .gitignore  .gitmodules  CMakeLists.txt  CMakeSettings.json  Readme.txt
Assets/shaders/: debug_quad_depth_fs.glsl  fragment_shader.glsl  light_fs.glsl  light_vs.glsl  normal_fs.glsl  normal_gm.glsl  shadow_mapping_depth_fs.glsl  shadow_mapping_depth_vs.glsl  shadow_mapping_fs.frag  shadow_mapping_vs.vert  texture_fs.glsl  texture_vs.glsl
entry/: CMakeLists.txt  main.cpp
project/: CMakeLists.txt  main.cpp
source/: CMakeLists.txt  common.cpp  common.h
source/FileSystem/: VirtualFileSystem.hpp
source/entryPoint/: main.cpp
source/graphics/: Camera.cpp  Camera.h  IndexBuffer.cpp  IndexBuffer.h  Mesh.cpp  Mesh.h  Model.cpp  Model.h  Renderer.cpp  Renderer.h  Shader.cpp  Shader.h  Texture.cpp  Texture.h  VertexArray.cpp  VertexArray.h  VertexBuffer.cpp  VertexBuffer.h  VertexBufferLayout.h  Window.cpp  Window.h
source/system/: AbstractWindow.cpp  AbstractWindow.h  DispatchEvent.cpp  Window.cpp
source/utility/: Base.h  Timer.h  Utils.cpp  Utils.h
